# hard_porn

./: README.md
Assigment 2/Evgenia Kivotova/src/: priority_queue.c  stack.c  stack.h
Assigment 2/Evgenia Kivotova/tests/: test_task.c
Assignment 1/src/: stack.h  task.c  task.h
Assignment 1/src/assignment2/: priority_queue.c  priority_queue.h  stack.c
Assignment 1/src/assignment3/: bitMap.c  bitMap.h
Assignment 1/tests/: CMakeLists.txt  test_queue.c  test_stack.c  test_task.c
Assignment 1/tests/assignment0_1/: test_binarize.c  test_task.c
Assignment 1/tests/assignment2/: test_queue.c  test_stack.c
Assignment 1/tests/assignment3/: test_bitMap.c
